1차 api 개발 완료 및 서버 연결 전
